<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPasswordName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/passwordNameHint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordName"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordName"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordName"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonCancel"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:textColor="@color/black"
        android:text="@string/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordName"
        app:layout_constraintEnd_toStartOf="@+id/ButtonConfirm"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toEndOf="@+id/ButtonCancel"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordName"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
